Added sign in feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>
-  <app-project-form (submitMe)="getProject($event)"></app-project-form>
-  <app-project-list [projects]="projects"></app-project-list>
-</h1>
+<app-navbar></app-navbar>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
