Basic authentication added

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,13 +3,17 @@
     <div class="card-block">
       <form>
         <div class="form-group">
-          <input type="email" [(ngModel)]="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" [(ngModel)]="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email">
         </div>
         <div class="form-group">
           <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
         <div class="form-group">
           <button class="btn btn-primary" (click)="signin()">Sign In</button>
+        </div>
+        <div class="alert alert-danger" role="alert" *ngIf="msg">
+          <strong>{{msg}}</strong>
         </div>
       </form>
     </div>
